2017-11-16  larissa9839  <larissa9839@gmail.com>

	* tryXpath/popup/popup.js:
	Rename function name. changeFrameVisible -> changeFrameIdVisible.
	Define frameDesignationHeader, frameDesignationCheckbox,
	frameDesignationBody, frameDesignationExpression variables.
	Define changeFrameDesignationVisible function.
	Save and restore some states related to frameDesignation.
	Modify makeExecuteMessage fucntion.

	* tryXpath/popup/popup.html (Main):
	Add some elements related frameDesignation.

	* tryXpath/popup/popup.js:
	Rename variables. frameHeader -> frameIdHeader, frameBody ->
	frameIdBody, frameCheckbox -> frameIdCheckbox.

	* tryXpath/popup/popup.html (Main):
	Rename ids.

2017-11-08  larissa9839  <larissa9839@gmail.com>

	* tryXpath/manifest.json:
	Change version. 1.0.0 -> 1.1.0

	* tryXpath/scripts/try_xpath_content.js:
	Fix focusItem function.
	Define isFocusable function.
	Modify focusItem function.

2017-11-07  larissa9839  <larissa9839@gmail.com>

	* tryXpath/popup/popup.js:
	Define helpCheckbox variable.
	Define changeHelpVisible function.
	Define helpBody variable.
	Fix sendToSpecifiedFrame function.

	* tryXpath/popup/popup.html (Main):
	Modify texts.
	Add the help-switch element.

	* tryXpath/popup/popup.js:
	Change time to send requestRestorePopupState message.

	* tryXpath/scripts/try_xpath_content.js: 
	Define findFrameElement function.
	Set "message" handler to window.

2017-11-06  larissa9839  <larissa9839@gmail.com>

	* tryXpath/background/try_xpath_background.js:
	Modify genericListener.listeners.updateCss function.
	Modify genericListener.listeners.requestSetContentInfo function.

	* tryXpath/scripts/try_xpath_content.js:
	Set initial value of prevMsg.

	* tryXpath/popup/popup.html (Results):
	Add some buttons.
	Add show-previous-results button.

	* tryXpath/popup/popup.js:
	Modify sendToSpecifiedFrame function.
	Modify sendExecute function.
	Add some handlers.

2017-11-05  larissa9839  <larissa9839@gmail.com>
