@@ -1,3 +1,9 @@
+2017-11-18  larissa9839  <larissa9839@gmail.com>
+
+	* tryXpath/scripts/try_xpath_functions.js:
+	Define isBlankWindow function.
+	Define collectBlankWindows function.
+
 2017-11-16  larissa9839  <larissa9839@gmail.com>
 
 	* tryXpath/popup/popup.js:
